--- a/index.html
+++ b/index.html
@@ -1,106 +1,13 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html>  
+</html>
 
 <head>
-    <title>Alura Plus</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-</head>
+   <title>alura plus</title>
+   <meta charset="UTF-8">
+   <meta name=" viewport" content=" width=device-width,initial-scale=1">
+   <linck rel="stylesheet" href="styles.css">
+<head>
 
-<body>
-    <section class="principal container">
-        <div class="container__caixa">
-            <h1 class="container__titulo">Toda semana,uma dupla é levada a locais inóspitos sem recursos e roupas.
-                único.</h1>
-            <img src="imagem2.png" alt="O combo+ é a junção do alura+ e o alura língua" class="container__imagem">
-            <a href="www.alura.com.br" class="container__botao">Episódios</a>
-            <a href="www.alura.com.br" class="container__botao botao_secundario">Começar agora</a>
-            <p class="container__aviso">*Violência,Nudes, Linguagem imprópria.</p>
-        </div>
-    </section>
-
-    <section class="container secundario">
-        <img src="discovery.jpeg" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
-        <div class="container__descricao">
-            <h2 class="descricao__titulo">Sobre o programa</h2>
-            <p class="descricao__texto">Largados e Pelados
-
-                A cada semana um homem e uma mulher são levados a um dos ambientes de clima mais extremo do mundo. Os dois ficarão literalmente expostos, já que serão deixados sem comida, sem água... e sem roupas.
-                </p>
-        </div>
-    </section>
-
-    <section class="container secundario">
-        <div class="container__descricao">
-            <p class="descricao__texto">
-                
-        
-            </p>
-            <a href="www.alura.com.br" class="container__botao secundario__botao" container></a>
-        </div>
-        <img src="aquilooesguerreiro3.jpg" alt="Tela do alura+ e alura língua" class="secundario__imagem">
-    </section>
-
-    <section class="container secundario">
-        <img src="" alt=""
-            class="secundario__imagem">
-        <div class="container__descricao">
-            <h2 class="descricao__titulo">Por que “Largados e Pelados” faz tanto sucesso?</h2>
-            <p class="descricao__texto">Acontece que a fascinação por essa existência primitiva é mais do que o suficiente para fazer um show de sucesso. Um dos maiores fenômenos da televisão nos últimos anos, o programa é o líder de audiência no Discovery. Exemplo do sucesso absoluto foi visto em março de 2020: em plena pandemia, um episódio inédito de Largados e Pelados no horário nobre colocou a emissora como a mais assistida de toda a televisão por assinatura do Brasil, à frente de notícias ou séries, segundo dados da Kantar Ibope Media </p>
-        </div>
-    </section>
-
-    <section class="dispositivos">
-        <h2 class="dispositivos__titulo">Disponível nos seus canais favoritos</h2>
-        <ul class="dispositivos__lista">
-            <li>
-                <img src="jujuba4.jpg" alt="Ícone de televisão">
-                <h3 class="lista__item"></h3>
-            </li>
-            <li>
-                <img src="img/computador.png" alt="Ícone de computador">
-                <h3 class="lista__item"></h3>
-            </li>
-            <li>
-                <img src="img/celular.png" alt="Ícone de celular">
-                <h3 class="lista__item"></h3>
-            </li>
-        </ul>
-    </section>
-
-    <footer class="rodape">
-        <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
-        <ul class="rodape__lista">
-            <li class="lista__link">
-                <a href="#"></a>
-            </li>
-            <li class="lista__link">
-                <a href="#"></a>
-            </li>
-            <li class="lista__link">
-                <a href="#"></a>
-            </li>
-            <li class="lista__link">
-                <a href="#"></a>
-            </li>
-            <li class="lista__link">
-                <a href="#"></a>
-            </li>
-            <li class="lista__link">
-                <a href="#"></a>
-            </li>
-            <li class="lista__link">
-                <a href="#">Ajuda</a>
-            </li>
-        </ul>
-        <p class="rodape__texto"></p>
-        <p class="rodape__texto"></p>
-    </footer>
-
-</body>
+    body></body>
 
 </html>
